# pdfdir

./: .gitignore  .travis.yml  REFACTORING.md  config.ini  export_exe.bat  pyproject.toml  readme.md  requirements.txt  requirements_build.txt  requirements_dev.txt  run.py  run_cli.py  run_gui.pyw  todo
.github/workflows/: linux-release.yml  mac-py310-release.yml  mac-py38-release.yml  mac-py39-release.yml  mac-release.yml  mac-silicon-release.yml  macos-12-release.yml  macos-14-release.yml  windows-release.yml
gui/: en.qm  en.ts  main.py  main.ui  main_ui.py  ui_to_py.bat  ui_to_py.py
language/: en.qm
pdf/: api.py  bookmark.py
src/: config.py  convert.py  isupdated.py  pdfdirectory.py  updater.py  version.py
src/gui/: base.py  en.ts  main.py  main.ui  main_ui.py  main_ui.ui  ui_to_py.bat  ui_to_py.py
src/language/: en.qm
src/pdf/: api.py  bookmark.py  example  pdf.py
test/: test_convert.py  test_none.py  test_split_page_num.py
tests/: test_convert.py  test_pdf.py
