[project]
name = "pdfdir"
version = "0.3.0"
description = "A tool to add table-of-contents bookmarks to PDF files"
readme = "readme.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.32.3",
    "pypdf[crypto]>=3.17.0",
    "PyQt6>=6.5.0",
]

[tool.uv]
dev-dependencies = [
    "pyinstaller",
    "Pillow",
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
